gu28: tweaks to login page css

--- a/theme/gu28/less/glasgow.less
+++ b/theme/gu28/less/glasgow.less
@@ -135,7 +135,7 @@ div.guimgbox {
 
 div.gufluff {
     position:relative;
-    width:42%;
+    width:48%;
     min-width:600px;
     height:400px;
     float:left;   
@@ -159,9 +159,9 @@ div.sloganbox {
 }
 
 .gulogin {
-    width:400px;
+    //width:400px;
     height:400px;
-    margin-left:10px;
+    margin-left:15px;
     overflow:hidden;
     float:left;
 }
