gu28: fiddling with fonts to no avail

--- a/theme/gu28/less/glasgow.less
+++ b/theme/gu28/less/glasgow.less
@@ -146,7 +146,7 @@ div.sloganbox {
     top:0;
     left:0;
     z-index:0;
-    font-family:'Yantramanav',sans-serif;
+    font-family:'Yantramanav', "Lucida Sans Unicode", sans-serif;
     font-weight:100;
     background-color:#003865;
     color:#fff;
