--- a/report/guid/templates/single.mustache
+++ b/report/guid/templates/single.mustache
@@ -77,7 +77,10 @@
                         {{# isgucourses }}
                             <small><ul>
                                 {{# gucourses }}
-                                    <li><a {{^ visible }}class="text-muted"{{/ visible }} href="{{{ link }}}">{{ fullname }}<a></li>
+                                    <li>
+                                        <a {{^ visible }}class="text-muted"{{/ visible }} href="{{{ link }}}">{{ fullname }}<a>
+                                        {{# enrolled }}<span class="badge badge-info">{{# str }}enrolled, report_guid{{/ str }}</span>{{/ enrolled }}
+                                    </li>
                                 {{/ gucourses }}
                             </ul></small>
                         {{/ isgucourses }}
@@ -85,6 +88,57 @@
                 {{/ formattedcourses }}
             </ul>
         {{/ nocourses }}
+    </p>
+  </div>
+</div>
+
+<div class="card m-t-2">
+  <div class="card-body">
+    <h4 class="card-title">{{# str }}turnitin, report_guid{{/ str }}</h5>
+    {{# tiieula }}
+        <div class="alert alert-success">
+            {{# str }}tiieulaaccepted, report_guid{{/ str }}
+        </div>
+    {{/ tiieula }}
+    {{^ tiieula }}
+        <div class="alert alert-danger">
+            {{# str }}tiieulanotaccepted, report_guid{{/ str }}
+        </div>
+    {{/ tiieula }}
+    <p class="card-text">
+        {{# notiifiles }}
+            {{# str }}notiifiles, report_guid{{/ str }}
+        {{/ notiifiles }}
+        {{^ notiifiles }}
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>{{# str }}tiiid, report_guid{{/ str }}</th>
+                        <th>{{# str }}tiistatus, report_guid{{/ str }}</th>
+                        <th>{{# str }}tiiscore, report_guid{{/ str }}</th>
+                        <th>{{# str }}tiierror, report_guid{{/ str }}</th>
+                        <th>{{# str }}tiitime, report_guid{{/ str }}<th>
+                        <th>&nbsp;</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{# tiifiles }}
+                        <tr>
+                            <th>{{ formattedexternalid }}</th>
+                            <td>{{ statuscode }}</th>
+                            <td>{{ formattedsimilarityscore }}</th>
+                            <td>{{ errorcode }}</td>
+                            <td>{{ formattedlastmodified }}</td>
+                            <td>
+                                {{# oktoresend }}
+                                    <a class="btn btn-info" href="{{{ resendlink }}}">{{# str }}tiiresend, report_guid{{/ str }}</a>
+                                {{/ oktoresend }}
+                            </td>
+                        </tr>
+                    {{/ tiifiles }}
+                </tbody>
+            </table>
+        {{/ notiifiles }}
     </p>
   </div>
 </div>
