--- a/report/guid/templates/single.mustache
+++ b/report/guid/templates/single.mustache
@@ -114,6 +114,7 @@
                 <thead>
                     <tr>
                         <th>{{# str }}tiiid, report_guid{{/ str }}</th>
+                        <th>{{# str }}module, report_guid{{/ str}}</th>
                         <th>{{# str }}tiistatus, report_guid{{/ str }}</th>
                         <th>{{# str }}tiiscore, report_guid{{/ str }}</th>
                         <th>{{# str }}tiierror, report_guid{{/ str }}</th>
@@ -125,6 +126,7 @@
                     {{# tiifiles }}
                         <tr>
                             <th>{{ formattedexternalid }}</th>
+                            <td><a href="{{{ link }}}">{{ cm }}</a></td>
                             <td>{{ statuscode }}</th>
                             <td>{{ formattedsimilarityscore }}</th>
                             <td>{{ errorcode }}</td>
