--- a/blocks/gu_spdetails/templates/spdetails.mustache
+++ b/blocks/gu_spdetails/templates/spdetails.mustache
@@ -20,10 +20,41 @@
     </div>
 {{/ showdetails }}
 {{# showdetails }}
-    <div id="assessments-container" class="assessments-details-container">
-        <div class="alert alert-info">
-            {{# str }}newfeature, block_gu_spdetails{{/ str }}
+
+    <div class="alert alert-info">
+        {{# str }}newfeature, block_gu_spdetails{{/ str }}
+    </div>
+
+    <div class="assessments-overview-container border rounded my-2">
+        <div class="row">
+            <div class="assessments-item assessments-submitted col-md-3 col-sm-6 col-xs-12">
+                <img src="{{assessments_submitted_icon}}" alt="{{assessments_submitted_str}}"
+                    class="assessments-item-icon"/>
+                <h2 class="assessments-item-count h1">{{assessments_submitted}}</h2>
+                <p class="assessments-item-label">{{assessments_submitted_str}}</p>
+            </div>
+            <div class="assessments-item assessments-tosubmit col-md-3 col-sm-6 col-xs-12">
+                <img src="{{assessments_tosubmit_icon}}" alt="{{assessments_tosubmit_str}}"
+                    class="assessments-item-icon"/>
+                <h2 class="assessments-item-count h1">{{assessments_tosubmit}}</h2>
+                <p class="assessments-item-label">{{assessments_tosubmit_str}}</p>
+            </div>
+            <div class="assessments-item assessments-overdue col-md-3 col-sm-6 col-xs-12">
+                <img src="{{assessments_overdue_icon}}" alt="{{assessments_overdue_str}}"
+                    class="assessments-item-icon"/>
+                <h2 class="assessments-item-count h1">{{assessments_overdue}}</h2>
+                <p class="assessments-item-label">{{assessments_overdue_str}}</p>
+            </div>
+            <div class="assessments-item assessments-marked col-md-3 col-sm-6 col-xs-12">
+                <img src="{{assessments_marked_icon}}" alt="{{assessments_marked_str}}"
+                    class="assessments-item-icon"/>
+                <h2 class="assessments-item-count h1">{{assessments_marked}}</h2>
+                <p class="assessments-item-label">{{assessments_marked_str}}</p>
+            </div>
         </div>
+    </div>
+
+    <div id="assessments-container" class="assessments-details-container">
         <ul id="assessments_details_tabs" class="nav nav-tabs" role="tablist">
             <li class="nav-item">
                 <a id="current_tab" class="nav-link h5" data-toggle="tab" role="tab"
