--- a/blocks/gu_spdetails/styles.css
+++ b/blocks/gu_spdetails/styles.css
@@ -219,3 +219,21 @@
 .hidden-container{
     display: none;
 }
+
+.assessments-overview-container .assessments-item {
+    text-align: center;
+}
+
+.assessments-overview-container .assessments-item-icon {
+    margin: 10px 0;
+}
+
+.assessments-overview-container .assessments-item-count {
+    color: #058;
+    font-weight: 600;
+    margin-bottom: 8px;
+}
+
+.assessments-overview-container .assessments-item-label {
+    color: #058;
+}
