--- a/report/guid/templates/single.mustache
+++ b/report/guid/templates/single.mustache
@@ -48,6 +48,7 @@
                         {{# ended }}<span class="badge badge-danger">{{# str }}ended, report_guid{{/ str }}</span>{{/ ended }}
                         {{# notstarted }}<span class="badge badge-primary">{{# str }}notstarted, report_guid{{/ str }}</span>{{/ notstarted }}
                         {{# hidden }}<span class="badge badge-info">{{# str }}hidden, report_guid{{/ str }}</span>{{/ hidden }}
+                        {{# gcatenabled }}<span class="badge badge-success">{{# str }}gcat, report_guid{{/ str }}{{/ gcatenabled }}
                     </li>
                 {{/ formattedenrolments }}
             </ul>
